# simplestweb_and_wx_minimal

./: CMakeLists.txt  README.md  main.cpp  minimal.cpp
comm/: CMakeLists.txt  comm.cpp  comm.h  connection.cpp  connection.h
mongoose/: CMakeLists.txt
sqlite/: CMakeLists.txt
sqlite-amalgamation-3320200/: CMakeLists.txt
wpObject/: CMakeLists.txt  jsonreader.cpp  jsonval.cpp  jsonwriter.cpp  sqlexception.cpp  sqlexception.h  words.cpp  words.h  wpObject.cpp  wpObject.h
